--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
         <activity
-            android:name=".view.MainActivity"
+            android:name=".view.PokeDaniInicio"
             android:exported="true"
             android:roundIcon="@mipmap/pokedani_app_round"
             android:label="@string/app_name"
